cluster/argocd/argo-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTPS","nginx.ingress.kubernetes.io/force-ssl-redirect":"true","nginx.ingress.kubernetes.io/ssl-passthrough":"true"},"name":"argocd-ingress","namespace":"argocd"},"spec":{"defaultBackend":{"service":{"name":"default-404","port":{"number":8181}}},"ingressClassName":"nginx","rules":[{"host":"argo.cx.one.pl","http":{"paths":[{ [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    name: argocd-ingress
    namespace: argocd
  spec:
    defaultBackend:
      service:
        name: default404
        port:
          number: 8181
    ingressClassName: nginx
    rules:
    - host: argo.cx.one.pl
      http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                name: https
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.241.118.102
kind: List
metadata:
  resourceVersion: ""
